src/third_party/nasm/travis/test/br2222615.stderr
./travis/test/br2222615.asm:14: error: `%ifnmacro' expects a macro name